--- a/index.html
+++ b/index.html
@@ -1,16 +1,46 @@
+<!DOCType html>
 <html>
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="maindiv>"
+
         <h1>Simple Interest Calculator</h1>
 
         Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+        <br>
+        <br>
+        Rate <input id="slider" type="range" min="1" max="20" step="0.25" value="10.25" oniput="sliderChange(this.value)">  <br/>
+        <span id="rate_val">10.25%</span>
+        <output id="sliderval"></output>
+        <br>
+        <br>
+        No. of Years <input type="dropdown"  id="years" list="year">
+        <datalist id="year"
+            <option value="1"></option>
+            <option value="2"></option>
+            <option value="3"></option>
+            <option value="4"></option>
+            <option value="5"></option>
+            <option value="6"></option>
+            <option value="7"></option>
+            <option value="8"></option>
+            <option value="9"></option>
+            <option value="10"></option>
+            </datalist>
+            <br>
+            <br>
+            <button onclick="compute()">Compute Interest</button>
+            <span id="result"></span>
+            <br>
+            <br>
+            <footer>
+                &#169; Created by Sean Ireland
+            </footer>
+            </body>
+        </div>
     </body>
 </html>
+
